--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^18",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
