--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-spinners-kit": "^1.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
