--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
-    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
-    "react-spinners-kit": "^1.9.1"
+    "react-spinners-kit": "^1.9.1",
+    "vercel": "^35.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
