--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@ramonak/react-progress-bar": "^5.2.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.4",
-    "next": "14.2.5",
+    "next": "^14.2.8",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
