--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.2.0",
+    "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
     "firebase": "^10.12.4",
     "next": "^14.2.8",
